# LibOS

./: .gitignore  .gitmodules  AptLinuxSetup.sh  CMakeLists.txt  CMakePresets.json  FutureVcpkg-LLVMPactch.txt  README.md  build.gradle  gradle.properties  local.properties  settings.gradle  vcpkg.json
.github/workflows/: cli_linux_ubuntu.yml  stale.yml
CMake_Build_Platforms/: Linux.cmake  Testing.cmake  Windows.cmake  WindowsStore.cmake
CMake_Modules/: FindWayland.cmake
Includes/: CrystalOS.h  RefractalAPI.h  RefractileAPI.h
Includes/Components/: Defines.h  FileIO.h  NetIO.h  Window.h
Includes/libos/: DataType.h  Defines.h  Error.h  FileIO.h  NativeWindow.h  NetIO.h  Window.h
Meta/: BuildCMake.sh  BuildGCC.sh  LinuxSetup.sh
cmake/: Doxygen.cmake  FlagControl.cmake  SourceList.cmake  Testing.cmake
gradle/wrapper/: gradle-wrapper.properties
src/: CMakeLists.txt  CmakeLists.txt
src/Common/: Settings.h
src/doxygen-custom/: header.html
src/legusy/: Xcb.cpp  Xcb.hpp
src/lib/: Callbacks.h  Cmake.h  Cmake.h.in  FileIO.cpp  IFileIO.h  InternalRefractile.h  NetIO.cpp  RefractileContext.cpp  Window.cpp
src/lib/Audio/: AudioBuffers.cpp  AudioContext.cpp
src/lib/Graphics/: CommandBuffer.cpp  FrameBuffer.cpp  GraphicsContext.cpp  GraphicsWindow.h  ShaderProgram.cpp  Share.h  vkExternal.h
src/lib/Graphics/Compiler/: Compile.cpp  Compiler.h  Lexer.cpp
src/lib/Jni/: FileIO.cpp  Handlers.h
src/lib/Jni/Headers/: uk_co_lunalux_libos_FileIO.h  uk_co_lunalux_libos_NetIO.h  uk_co_lunalux_libos_Window.h
src/lib/Linux/: FileIO.cpp  FileIO.h  FileIO.hpp  NetIO.cpp  NetIO.hpp  Panic.cpp  Userland.h  Window.cpp  Window.h  xdg-shell-client-protocol.h
src/lib/Linux/Audio/: AudioContext.cpp
src/lib/Linux/Graphics/: GraphicsContext.cpp
src/lib/Windows/: FileIO.cpp  FileIO.h  FileIO.hpp  NetIO.cpp  NetIO.hpp  Panic.cpp  Window.cpp  Window.h  Window.hpp  windows_link.h
src/lib/Windows/Audio/: AudioContext.cpp
src/lib/Windows/Graphics/: GraphicsContext.cpp
src/libOS/: CMakeLists.txt
src/libOS/Error/: Posix.cpp  Win32.cpp
src/libOS/FileIO/: Android_JNI.cpp  CMakeLists.txt  CmakeLists.txt  Posix.cpp  Win32.cpp  WinRT.cpp
src/libOS/Interface/: AbstractWindow.h  CMakeLists.txt  CmakeLists.txt  FileIO.cpp  Main.cpp  NetIO.cpp  Window.cpp
src/libOS/NetIO/: CMakeLists.txt  Posix.cpp  Win32.cpp  WinRT.cpp
src/libOS/Window/: Android.cpp  Android.hpp  CMakeLists.txt  CmakeLists.txt  Wayland.cpp  Wayland.hpp  WaylandLibDecor.cpp  Win32.cpp  Win32.hpp  WinRT.cpp  WinRT.hpp  Xcb.cpp  Xcb.hpp  xdg-shell-client-protocol.h  xdg-shell-protocol.c
src/libOS/Window/libdecor/: CMakeLists.txt  cursor-settings.c  libdecor-fallback.c  libdecor.c  xdg-decoration-client-protocol.c
src/libOSExtensions/: Config.cpp
src/main/: AndroidManifest.xml
src/main/java/io/github/lunaluxprojects/myapplication/: MainActivity.java
src/shared/: AbstractWindow.h  Cmake.h.in
src/shared/extend_std/: Iterator.h  LookUpTable.h  Macro.h  Vector.h
src/test/: AndroidMain.cpp  Cmake.h  Cmake.h.in  Package.appxmanifest  Server.cpp  TestMain.cpp
src/tests/: Cmake.h  Cmake.h.in  FileIOTest.cpp  FileIOTest.h  Main.cpp  NetIOTest.cpp  NetIOTest.h  server.cpp  udpServer.cpp
tests/Linux/: ClientTests  UDPClientTests
tests/Shader/: VertexShader.vert.spirv  fragmentShader.frag.spirv  settings.json  test.json  vertexShader.vert
tests/UWP/: LICENSE.txt
